<resources>
    <string name="app_name">Kanma</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Event">Event</string>
    <string name="user">user</string>
    <string name="menu">menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainService">mainService</string>
    <string name="groupe">Groupe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="choix_mot_de_passe">Choix mot de passe</string>
    <string name="confirmer_votre_mot_de_passe">Confirmer votre mot de passe</string>
    <string name="disconnect">Disconnect</string>
    <string name="delete_account">Delete Account</string>
    <string name="titre_de_l_event">Titre de l\'event</string>
    <string name="message">Message</string>
    <string name="image_du_groupe">Image du groupe</string>
    <string name="nom_du_groupe">Nom Du Groupe</string>
    <string name="vous_n_avez_pas_encore_de_conversation">Vous n\'avez pas encore de conversation</string>
    <string name="image_event">Image event</string>
    <string name="_10_adresse_de_l_event_91300">10 Adresse de l\'event,91300</string>
    <string name="_19h30_06_30_2020">19h30, 06/30/2020</string>
    <string name="reserver_son_billet_100">Reserver son billet: 100€</string>
    <string name="description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description_description">Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description</string>
    <string name="proposer_un_covoiturage">Proposer un covoiturage</string>
    <string name="erreur">Erreur</string>
    <string name="description">Description</string>
    <string name="groupe">Groupe</string>
    <string name="event">Event</string>
    <string name="personne">Personne</string>
    <string name="rechercher">Rechercher</string>
    <string name="groupe">Groupe</string>
    <string name="profil">Profil</string>
    <string name="evenement">Evenement</string>
    <string name="parametres">Parametres</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="redigez_votre_message_d_invitation">Redigez votre message d\'invitation :</string>
    <string name="bonjour_bienvenue_sur_mon_groupe">Bonjour, bienvenue sur mon groupe !</string>
    <string name="confirmer_et_envoyer">Confirmer et envoyer</string>
    <string name="rechercher_personne_ou_groupe">Rechercher personne ou groupe</string>
    <string name="mes_conversations">Mes Conversations</string>
    <string name="personne">Personne</string>
    <string name="publier_par">Publier par</string>
    <string name="moi_m_me">moi-même</string>
    <string name="publier_avec_un_de_mes_groupes">Publier avec un de mes groupes</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="lieu">Lieu</string>
    <string name="visibilit_de_l_evenement">Visibilité de l\'evenement :</string>
    <string name="groupe_public">Public</string>
    <string name="custom">Custom</string>
    <string name="liste_des_invit_s">Liste des invités:</string>
    <string name="valider">Valider</string>
    <string name="creer_un_groupe_pour_pouvoir_publier_des_evenements_public_ou_de_groupe_inviter_uniquement_les_organisateur_de_votre_groupe_ou_vos_amis_vous_etes_par_defaut_administrateur_du_groupe_et_vous_pouvez_l_editer_tous_moment">Creer un groupe pour pouvoir publier des evenements public ou de groupe. Inviter uniquement les organisateur de votre groupe ou vos amis. Vous etes par defaut administrateur du groupe et vous pouvez l\'editer à tous moment.</string>
    <string name="inviter">Inviter</string>
    <string name="editer_la_description">Editer la description :</string>
    <string name="you_are_not_connecting_to_internet">You are not connecting to internet</string>
    <string name="pseudo">Pseudo</string>
    <string name="genre">Genre</string>
    <string name="_20_ans">20 ans</string>
    <string name="description">Description</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="evenement">Evenement</string>
    <string name="prochain_event">Prochain event</string>
    <string name="creer_un_evenement">Creer un evenement</string>
    <string name="invitation">Invitation</string>
    <string name="evenement_en_commun">Evenement en commun</string>
    <string name="supprimer_un_evenement">Supprimer un evenement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="choix_du_nom_d_utilisateur">Choix du nom d\'utilisateur</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="choix_mot_de_passe">Choix mot de passe</string>
    <string name="confirmer_votre_mot_de_passe">Confirmer votre mot de passe</string>
    <string name="femme">Femme</string>
    <string name="homme">Homme</string>
    <string name="sign_up">Sign Up</string>
    <string name="retour">Retour</string>
    <string name="rechercher_une_personne">Rechercher une personne</string>
    <string name="prenom_nom">Prenom Nom</string>
    <string name="genre">Genre</string>
    <string name="_20_ans">20 ans</string>
    <string name="mail_mail_fr">mail@mail.fr</string>
    <string name="profil">Profil</string>
    <string name="groupes">Groupes</string>
    <string name="description">Description</string>
    <string name="mes_groupes">Mes Groupes:</string>
    <string name="messages">Messages</string>
    <string name="creer_un_groupe">Creer un groupe</string>
    <string name="groupe_epingle">Groupe epingle</string>
    <string name="evenement_des_groupes">Evenement des groupes</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="hello_hello">hello, hello!</string>
    <string name="_11_40">11:40</string>
    <string name="parametres">Parametres</string>
    <string name="aide">Aide</string>
    <string name="politique_de_confidientialite">Politique de confidientialite</string>
    <string name="langues">Langues</string>
    <string name="conditions_general_d_utilisation">Conditions general d utilisation</string>
    <string name="nous_contacter">Nous contacter</string>
    <string name="inform_nothing_to_edit">Rien a modifier</string>
    <string name="inform_error_try_later">Vous avez rencontré une erreur, reesayez dans quelques temps</string>
    <string name="loading_error">erreur lors du chargement</string>
    <string name="loading_error">erreur lors du chargement</string>
    <string name="loading_error">erreur lors du chargement</string>
    <string name="create_account">Creer un compte</string>
    <string name="later">Plus tard</string>
    <string name="later">Plus tard</string>
    <string name="cannot_get_location">Cannot get location</string>
    <string name="you_have_been_log_off">Vous avez été déconnecté</string>
    <string name="element_not_found">Aucun element trouve</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="error_group_field_isEmpty">Le nom du groupe est un champ obligatoire</string>
    <string name="error_try_later">Desole une erreur est survenu, reessayez dans quelques instant</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="loading_error">erreur lors du chargement</string>
    <string name="login_or_password_invalid">Login ou mot de passe incorrect</string>
    <string name="name_and_password_required">Le nom d\'utilisateur et le mot de passe sont obligatoires</string>
    <string name="passwords_do_not_match">les mots de passes ne correspondent pas</string>
    <string name="fill_in_all_fields">Remplissez tous les champ</string>
    <string name="error_check_your_connection_or_retry_later">Vous avez rencontré une erreur, verifiez votre connexion ou reesayez dans quelques temps</string>
    <string name="error">erreur</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied">Permission Denied</string>
</resources>
