<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/ic_list_menu_background"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:nextFocusRight="@id/menu"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="82dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="returnMainMenu"
            android:tag="@+id/include"
            android:text="@string/evenement"
            android:textSize="35sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_left_arrow"
            android:drawableStart="@drawable/ic_left_arrow"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/prochain_event"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creer_un_evenement"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evenement_en_commun"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supprimer_un_evenement"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />



    </LinearLayout>
</FrameLayout>