<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/ic_list_menu_background"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:nextFocusRight="@id/menu"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="82dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="returnMainMenu"
            android:tag="@+id/include"
            android:text="@string/parametres"
            android:textSize="35sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_left_arrow"
            android:drawableStart="@drawable/ic_left_arrow"
            android:layout_margin="5dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/aide"
            android:layout_margin="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politique_de_confidientialite"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langues"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditions_general_d_utilisation"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nous_contacter"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />



    </LinearLayout>
</FrameLayout>