<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choix_du_nom_d_utilisateur"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:id="@+id/signUpUsername"/>

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:id="@+id/signUpSurname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choix_mot_de_passe"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:id="@+id/signUpPasswd1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmer_votre_mot_de_passe"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:id="@+id/signUpPasswd2"/>

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/checkFemme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/femme" />

        <RadioButton
            android:id="@+id/checkHomme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homme" />
    </RadioGroup>

    <Button
        android:id="@+id/signUpBtnInscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:onClick="onClickInscription"
        />

    <Button
        android:id="@+id/signUpBtnRetourSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:onClick="onClickBackButton"/>

</LinearLayout>
</ScrollView>