<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilPicture"
            android:layout_width="151dp"
            android:layout_height="151dp"

            android:onClick="changePicture"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prenom_nom"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/genreTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/ageTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_ans"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_mail_fr"
                    android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btnProfil"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:text="@string/profil"


                android:onClick="onClickProfil"

                android:enabled="false"

                />

            <Button

                android:id="@+id/btnGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:text="@string/groupes"

                android:onClick="onClickGroup"
                />

    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layDescription"

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textLongMessage"
                android:maxLines="50"


                android:visibility="gone"
                />

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <LinearLayout
        android:id="@+id/layGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/evenementTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mes_groupes"
            android:textSize="24sp" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />
                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />

                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />
                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />
                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />
                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />
                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />
                <ImageView

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_user" />


            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>


</LinearLayout>