<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewConversationActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        >



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >

            <LinearLayout
                android:id="@+id/selectedDest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"/>


        </ScrollView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redigez_votre_message_d_invitation"

            android:textSize="16sp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/messageTxt"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="10"
            android:text="@string/bonjour_bienvenue_sur_mon_groupe"
            android:scrollbars="vertical"
            android:minHeight="100dp"
            />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/sentButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_send_grey"
            android:layout_gravity="end"
            android:enabled="false"
            android:onClick="onClickSent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmer_et_envoyer"
            android:layout_gravity="start|center_vertical"

            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout

        android:id="@+id/txtInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/inputTxtLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColorHint="@color/colorAccent"


            >

            <Button
                android:id="@+id/closeSearchModeBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_left_arrow"
                android:onClick="onClickBack" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawableStart="@drawable/ic_search"
                    android:drawableLeft="@drawable/ic_search"
                    android:ems="10"
                    android:hint="@string/rechercher_personne_ou_groupe"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchModeLay"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_menu_background"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/selectGroupBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="selectGroup"
                        android:text="@string/mes_conversations" />


                    <Button
                        android:id="@+id/selectUserBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="selectUser"
                        android:text="@string/personne" />
                </LinearLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <LinearLayout
                    android:id="@+id/entityContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>
        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>